<resources>
    <string name="app_name">애견 커뮤니티</string>

    <!-- Mathcing Main Activity -->
    <string name="matching_start_match">애견 매칭 시작</string>
    <string name="matching_regist_match">애견 등록</string>

    <string name="matching_bottom_content1">현재 </string>
    <string name="matching_bottom_content2">마리의 애견이 매칭을 기다리고 있습니다.</string>

    <string name="select_album_or_camera">강아지 사진을 어디서 가져올까요?</string>
    <string name="select_album_or_camera_info">권한 승인 후 다시 눌러주세요.</string>

    <string name="default_now_matching">Start matching...</string>
    <string name="default_man">암컷</string>
    <string name="default_woman">수컷</string>
    <string name="default_man_h">남자</string>
    <string name="default_woman_h">여자</string>
    <string name="default_next">다음</string>
    <string name="default_process">처리 중...</string>
    <string name="default_close">닫기</string>
    <string name="default_http_error">데이터 요청에 실패했습니다.</string>
    <string name="default_exec_error">Client error.</string>
    <string name="default_nickname">닉네임</string>
    <string name="defalut_name">성함</string>

    <!-- Regist Pet Activity -->
    <string name="registpet_activity_header1">애견 정보 입력</string>
    <string name="registpet_activity_header2">사진 업로드</string>
    <string name="registpet_activity_header3">주인 정보 입력</string>

    <string name="registpet1_title">강아지에 대한 정보를 입력해주세요.</string>
    <string name="registpet1_input_type">견종을 선택하세요.</string>
    <string name="registpet1_name">강아지 이름</string>
    <string name="registpet1_age">강아지 나이</string>

    <string name="registpet2_upload_file">강아지 사진을 업로드 하세요.</string>
    <string name="registpet2_uploaded">업로드 되었습니다.</string>

    <string name="registpet3_title">주인님 전화번호를 입력해주세요.</string>
    <string name="registpet3_tel">전화번호를 입력하세요.</string>
    <string name="registpet3_msg">매칭이 되면 이 전화번호로 상대 주인이 전화를 걸 것입니다.\n정확하게 입력해주세요.</string>


    <!-- Social Login Activity -->
    <string name="login_title">환영합니다.\n애견 커뮤니티 입니다.</string>

    <!-- Register Activity -->
    <string name="register_title">애견 커뮤니티 가입을 환영합니다.</string>
    <string name="register_upload_profile">프로필 사진 업로드</string>
    <string name="register_kakaologin_failed">카카오 로그인 데이터를 연동 할 수 없습니다.\n앱을 닫고 다시 시도하십시오.</string>
    <string name="register_uploaded_profile">프로필 사진이 업로드 되었습니다.</string>

    <!-- Upload Image Activity -->
    <string name="upload_image_cancel">취소</string>
    <string name="upload_image">이미지 업로드</string>
    <string name="upload_plz_select">이미지를 선택하세요.</string>
    <string name="upload_now_loading">Uploading...</string>
    <string name="upload_now_loading_kr">업로드 중 입니다...</string>
    <string name="upload_check_uploaded">무결점 검사 중...</string>
    <string name="upload_retry">다시 업로드</string>
    <string name="upload_success_msg">업로드 되었습니다.\n완료하려면 뒤로가기를 누르세요.</string>

    <!-- Matching filter Activity -->
    <string name="filter_title">애견 매칭을 시작합니다.\n강아지 종류를 선택하고 시작 버튼은 누르세요.</string>
    <string name="filter_pettype_title">강아지 종류를 선택하세요.</string>

    <!-- Matched Activity -->
    <string name="matched_title">MATCHING SUCCESS</string>
    <string name="matched_close">취소</string>
    <string name="matched_apply">매칭 승인</string>
</resources>
