<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/registpet_3_header"
        android:background="@color/matching_submain_color"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registpet_activity_header1"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/default_black"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registpet_activity_header2"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/default_black"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registpet_activity_header3"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/default_white"
            android:textSize="12sp"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registpet_3_container"
        android:orientation="vertical"
        android:layout_below="@id/registpet_3_header">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/registpet3_title"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>
        <include
            layout="@layout/layout_hrline"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registpet3_tel_input"
            android:gravity="center"
            android:textSize="13sp"
            android:background="@null"
            android:padding="12dp"
            android:inputType="phone"
            android:layout_margin="16dp"
            android:hint="@string/registpet3_tel"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registpet3_msg"
            android:layout_margin="16dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/registpet3_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:background="@color/matching_green_color"
        android:text="@string/default_next"
        android:textColor="#ffffff" />
</RelativeLayout>