<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/registpet_1_header"
        android:background="@color/matching_submain_color"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registpet_activity_header1"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/default_white"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registpet_activity_header2"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/default_white"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registpet_activity_header3"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/default_white"
            android:textSize="12sp"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registpet_1_container"
        android:orientation="vertical"
        android:layout_below="@id/registpet_1_header">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/registpet1_title"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>
        <include
            layout="@layout/layout_hrline"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registpet1_select_type"
            android:gravity="center"
            android:textSize="13sp"
            android:background="@null"
            android:padding="12dp"
            android:layout_margin="16dp"
            android:hint="@string/registpet1_input_type"
            android:editable="false"
            />

        <EditText
            android:id="@+id/registpet1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/registpet1_name"
            android:padding="12dp"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/registpet1_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/registpet1_age"
            android:inputType="number"
            android:maxLength="2"
            android:padding="12dp"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/registpet1_gen_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/registpet1_gen_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/default_man" />

                <RadioButton
                    android:id="@+id/registpet1_gen_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_woman" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/registpet1_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:background="@color/matching_green_color"
        android:text="@string/default_next"
        android:textColor="#ffffff" />
</RelativeLayout>