<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/matching_main_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/user_regist_header">
        <include
            layout="@layout/layout_action_bar"
            android:layout_width="match_parent"
            android:layout_height="55dp" />
        <include
            layout="@layout/layout_hrline"
            android:layout_height="3dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:textColor="@color/default_white"
            android:textSize="16sp"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_regist_ok"
        android:text="@string/default_next"
        android:background="@color/matching_green_color"
        android:textColor="@color/default_white"
        android:layout_alignParentBottom="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/user_regist_form"
        android:fillViewport="true"
        android:layout_below="@id/user_regist_header"
        android:layout_margin="24dp"
        android:layout_above="@id/user_regist_ok">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/form_nickname"
                android:background="@null"
                android:padding="12dp"
                android:textColor="@color/default_white"
                android:hint="@string/default_nickname"
                android:textSize="12sp"
                android:gravity="center"
                android:textColorHint="@color/default_gray" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/form_profile_upload"
                android:background="@null"
                android:padding="12dp"
                android:textColor="@color/default_white"
                android:text="@string/register_upload_profile"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginTop="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/form_name"
                android:background="@null"
                android:padding="12dp"
                android:textColor="@color/default_white"
                android:hint="@string/defalut_name"
                android:textSize="12sp"
                android:gravity="center"
                android:textColorHint="@color/default_gray"
                android:layout_marginTop="16dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/form_gender"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/form_user_man"
                    android:text="@string/default_man_h"
                    android:textColor="@color/default_white"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:id="@+id/form_user_woman"
                    android:text="@string/default_woman_h"
                    android:textColor="@color/default_white"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>