<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/start_match_container">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_title"
            android:gravity="center"
            android:textColor="@color/default_white"
            android:layout_margin="16dp"
            android:lineSpacingMultiplier="1.5"
            android:textSize="15sp"/>

        <include
            layout="@layout/layout_hrline"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_pettype_title"
            android:textColor="@color/default_gray"
            android:layout_margin="16dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/filter_pet_selector"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filter_start_matching"
        android:layout_alignParentBottom="true"
        android:background="@color/matching_green_color"
        android:text="@string/matching_start_match"
        android:textColor="@color/default_white"/>


</RelativeLayout>