<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/registpet_2_header"
        android:background="@color/matching_submain_color"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registpet_activity_header1"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/default_white"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registpet_activity_header2"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/default_white"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registpet_activity_header3"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/default_white"
            android:textSize="12sp"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registpet_2_container"
        android:orientation="vertical"
        android:layout_below="@id/registpet_2_header">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/upload_image_button"
            android:text="파일을 업로드 합니다."/>
    </LinearLayout>

    <!--
    <Button
        android:id="@+id/registpet2_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:background="@color/matching_green_color"
        android:text="@string/default_next"
        android:textColor="#ffffff" /> -->
</RelativeLayout>